--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
+    "chess-web-api": "^1.1.2",
     "chess.js": "^1.0.0-alpha.0",
     "react": "^18.2.0",
     "react-chessboard": "^1.3.0",
